--- a/style.css
+++ b/style.css
@@ -115,7 +115,8 @@ footer {
 
 .social {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
+    align-items: center;
 }
 
 button {
@@ -153,4 +154,8 @@ button::hover {
 .instagram, .twitter, .facebook {
     width: 70px;
     height: 70px;
+}
+
+.instagram .twitter, .facebook li {
+    padding: .2rem;
 }
