--- a/style.css
+++ b/style.css
@@ -108,14 +108,10 @@ footer {
     list-style: none;
 }
 
-.end {
-    display: flex;
-    justify-content: flex-start;
-}
 
 .social {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 }
 
@@ -128,6 +124,7 @@ button {
     padding: .4em .2em;
     text-shadow: 0 0 0.5em blueviolet;
     box-shadow: 0 0 0.4em blue;
+    width: 20%;
 }
 
 button::before {
@@ -158,4 +155,13 @@ button::hover {
 
 .instagram .twitter, .facebook li {
     padding: .2rem;
+}
+
+h3 {
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+p {
+    font-size: 20px;
 }
