--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 header {
-    border: 1px solid pink;
+    border-bottom: 1px solid pink;
     color: palegoldenrod;
 
 }
@@ -64,6 +64,7 @@ h2 {
     font-size: 2.2rem;
     font-weight: bold;
     text-decoration: underline;
+    text-align: center;
 }
 
 #projects {
@@ -104,6 +105,7 @@ h2 {
 footer {
     color: violet;
     list-style: none;
+    border-top: 2px solid pink;
 }
 
 
@@ -120,8 +122,8 @@ button {
     color: plum;
     border: .12em solid currentColor;
     padding: .4em .2em;
-    text-shadow: 0 0 0.5em lightcyan;
-    box-shadow: 0 0 0.4em purple;
+    text-shadow: 0 0 0.5em lightgreen;
+    box-shadow: 0 0 0.4em white;
     width: 20%;
     border-radius: 20px;
     background-color: black;
@@ -160,6 +162,7 @@ button:hover {
 h3 {
     font-weight: bold;
     text-decoration: underline;
+    font-size: 1.5em;
 }
 
 p {
