--- a/style.css
+++ b/style.css
@@ -177,3 +177,8 @@ p {
     border: 1px solid black;
     border-radius: 5px;
 }
+
+#displayLink {
+    margin: 10px;
+    background-color: deeppink;
+}
